# niteroi-itbi-heatmap

./: .gitignore  AGENTS.md  PHASE_4_6_DATA_SOURCES.md  PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: update.yml
docs/: insights.html
docs/data/: itbi_geo.json
itbi/: __init__.py  __main__.py  backtest.py  cli.py  config.py  consolidacao.py  descoberta.py  download.py  geocodificacao.py  heatmap.py  insights.py  normalizacao_llm.py  street_map.py
scripts/: scraper.py
tests/: conftest.py  test_cli.py  test_consolidacao.py  test_contratos_fonte.py  test_descoberta.py  test_geocodificacao.py  test_heatmap.py  test_idempotencia.py  test_insights.py  test_normalizacao_llm.py  test_recuperacao.py
